# entropy-tracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.aws.yml  docker-compose.yml  nginx.aws.conf  pyproject.toml
dashboard/: index.html  package-lock.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: Heatmap.jsx  Landing.jsx  ModuleDetail.jsx  TrendChart.jsx
docs/: 00_index.md  01_introduction.md  02_installation.md  03_cli_reference.md  04_configuration.md  05_ci_integration.md  06_api_dashboard.md  07_how_it_works.md
entropy/: cli.py  ignore.py
entropy-action/: README.md  action.yml
entropy/analyzers/: ast_analyzer.py  dep_analyzer.py  git_analyzer.py  npm_analyzer.py
entropy/scoring/: alerts.py  scorer.py
entropy/storage/: db.py  models.py
scripts/: build_demo.py  check_alerts.py  check_ts.py  drop_tables.py  run_diff_test.py  test_dep.py  test_init.py
